# MLAPI-fastAPI

./: .dockerignore  .gitignore  README.md  analysis.ipynb  docker-compose.yaml  env.sample  pyproject.toml
api/: config.py  main.py  migrate_db.py
api/files/: preparation.py
api/models/: image.py
api/predictions/: calculation.py  model.pickle  preprocess.py
api/preparations/: image.py
api/routers/: image.py  ml.py  ml_model.py
api/schemas/: image.py  ml.py  ml_model.py
tests/: test_main.py
