[tool.poetry]
name = "ml-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.1"}
python-multipart = "^0.0.5"
SQLAlchemy = "^1.4.39"
aiomysql = "^0.1.1"
boto3 = "^1.24.27"
Werkzeug = "^2.1.2"
numpy = "^1.23.1"
Pillow = "^9.2.0"
scikit-learn = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.19.0"
aiosqlite = "^0.17.0"
httpx = "^0.23.0"
pytest = "^7.1.2"
pytest-mock = "^3.8.2"
pathlib = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
